Using schemas for parameters.
